feat: release v1.5.0 three-agent plugin support